log
Wed 03 May 2023 03:25:07 PM UTC: 
 sudoku.c | 27 +++++++++++++++++++++++++++
 1 file changed, 27 insertions(+)
 tests:  2|4
total_score: 15/70
9616161
Thu 04 May 2023 01:13:01 AM UTC: 
 sudoku.c | 77 +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 76 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:108:8: error: implicit declaration of function ‘has_valid_rows’ [-Werror=implicit-function-declaration]
  108 |     if(has_valid_rows(n->sudo, i) == 0) return 0;
      |        ^~~~~~~~~~~~~~
sudoku.c:111:10: error: implicit declaration of function ‘has_valid_columns’; did you mean ‘has_unique_columns’? [-Werror=implicit-function-declaration]
  111 |       if(has_valid_columns(n->sudo, j) == 0) return 0;
      |          ^~~~~~~~~~~~~~~~~
      |          has_unique_columns
cc1: all warnings being treated as errors
Compilation failed
d9a9046
Thu 04 May 2023 01:13:43 AM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
d96f7d7
Thu 04 May 2023 01:17:22 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  5|3
total_score: 35/70
ee501d5
Fri 05 May 2023 03:06:40 AM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
10907bd
Fri 05 May 2023 03:07:03 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
d09bd6a
Fri 05 May 2023 03:07:20 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
21412e8
